--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install dependencies
-        run: yarn  # Change to npm install if you use npm
+        run: npm install  # Change to npm install if you use npm
 
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         with:
           # Chromatic projectToken, refer to the manage page to obtain it.
           projectToken: ${{ secrets.CHROMATIC_PROJECT_TOKEN }}
+          buildCommand: 'npm run build-storybook'
+          outputDir: 'storybook-static'
